--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -23,7 +25,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^14.1.0",
-    "@types/node": "^20.11.10",
+    "@types/node": "^20.11.30",
     "@types/react": "^18.2.48",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
     "@typescript-eslint/parser": "^6.19.1",
