--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "lottie": "^0.0.1",
     "lottie-react": "^2.4.0",
-    "lottie-web": "^5.12.2",
     "next": "^14.1.0",
     "next-seo": "^6.4.0",
     "react": "^18.2.0",
@@ -32,7 +32,7 @@
     "autoprefixer": "^10.4.17",
     "cross-env": "^7.0.3",
     "cssnano": "^6.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
     "eslint-config-next": "^14.1.0",
@@ -52,7 +52,7 @@
     "prettier": "^3.2.4",
     "rimraf": "^5.0.5",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3"
   },
   "license": "ISC"
 }
