--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "classnames": "^2.5.1",
+    "daisyui": "^4.9.0",
     "lottie": "^0.0.1",
     "lottie-react": "^2.4.0",
     "next": "^14.1.0",
